--- a/index.html
+++ b/index.html
@@ -76,30 +76,30 @@
 <section id="products" class="products">
   <h2>Our Products</h2>
 
-  <div class="product-grid">
-    <div class="product-card">
-      <img src="https://images.unsplash.com/photo-1580910051074-7c8e2b09f7c5">
-      <h3>Fresh Milk</h3>
-      <p>Pure farm fresh milk</p>
-    </div>
+ <div class="product-card">
+  <div class="img-placeholder">🥛</div>
+  <h3>Fresh Milk</h3>
+  <p>Pure farm fresh milk</p>
+</div>
 
-    <div class="product-card">
-      <img src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f">
-      <h3>Desi Ghee</h3>
-      <p>Traditional & healthy</p>
-    </div>
+<div class="product-card">
+  <div class="img-placeholder">🧈</div>
+  <h3>Desi Ghee</h3>
+  <p>Traditional & healthy</p>
+</div>
 
-    <div class="product-card">
-      <img src="https://images.unsplash.com/photo-1604908177522-04019c8c1a55">
-      <h3>Curd</h3>
-      <p>Thick & probiotic rich</p>
-    </div>
+<div class="product-card">
+  <div class="img-placeholder">🍶</div>
+  <h3>Curd</h3>
+  <p>Thick & probiotic rich</p>
+</div>
 
-    <div class="product-card">
-      <img src="https://images.unsplash.com/photo-1608032077018-c9d8caa30a9c">
-      <h3>Paneer</h3>
-      <p>Soft & protein rich</p>
-    </div>
+<div class="product-card">
+  <div class="img-placeholder">🧀</div>
+  <h3>Paneer</h3>
+  <p>Soft & protein rich</p>
+</div>
+
   </div>
 </section>
 
