--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>ShuddhaDhara Dairy | Pure & Natural Dairy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css?v=4">
+  <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
@@ -18,4 +18,82 @@
                A18 18 0 0 0 68 58
                C68 44, 58 36, 50 22 Z"
             fill="white"/>
-      <path d="M58 40 C70 35, 78 45,
+      <path d="M58 40 C70 35, 78 45, 70 55
+               C62 50, 58 45, 58 40 Z"
+            fill="#2e7d32"/>
+    </svg>
+
+    <div class="logo-text">
+      <span class="brand">ShuddhaDhara</span>
+      <span class="sub">Dairy</span>
+    </div>
+  </div>
+
+  <p>Pure Milk • Desi Ghee • Fresh Curd • Soft Paneer</p>
+  <a href="https://wa.me/919182506613" class="btn">Order on WhatsApp</a>
+</header>
+
+<!-- HERO (SAFE STATIC SECTION) -->
+<section class="hero">
+  <h2>Pure Milk from Happy Cows</h2>
+  <p>Fresh • Natural • Farm Direct</p>
+  <a href="#products" class="btn">Explore Our Products</a>
+</section>
+
+<!-- PRODUCTS -->
+<section id="products" class="products">
+  <h2>Our Products</h2>
+
+  <div class="product-grid">
+
+    <div class="product-card">
+      <div class="img-placeholder">🥛</div>
+      <h3>Fresh Milk</h3>
+      <p>Pure farm fresh milk</p>
+    </div>
+
+    <div class="product-card">
+      <div class="img-placeholder">🧈</div>
+      <h3>Desi Ghee</h3>
+      <p>Traditional & healthy</p>
+    </div>
+
+    <div class="product-card">
+      <div class="img-placeholder">🍶</div>
+      <h3>Curd</h3>
+      <p>Thick & probiotic rich</p>
+    </div>
+
+    <div class="product-card">
+      <div class="img-placeholder">🧀</div>
+      <h3>Paneer</h3>
+      <p>Soft & protein rich</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <h2>About Us</h2>
+  <p>
+    ShuddhaDhara Dairy delivers farm-fresh, hygienic dairy products
+    made using traditional methods.  
+    No chemicals. No shortcuts. Only purity you can trust.
+  </p>
+</section>
+
+<!-- CONTACT -->
+<section class="contact">
+  <h2>Contact & Orders</h2>
+  <p>📍 Location: Chilakaluripet</p>
+  <p>📞 Phone: +91 9182506613</p>
+  <a href="https://wa.me/919182506613" class="btn">Chat on WhatsApp</a>
+</section>
+
+<footer>
+  <p>© 2025 ShuddhaDhara Dairy. All Rights Reserved.</p>
+</footer>
+
+</body>
+</html>
