--- a/index.html
+++ b/index.html
@@ -35,11 +35,30 @@
 </header>
 
 <!-- HERO (SAFE STATIC SECTION) -->
-<section class="hero">
-  <h2>Pure Milk from Happy Cows</h2>
-  <p>Fresh • Natural • Farm Direct</p>
-  <a href="#products" class="btn">Explore Our Products</a>
+<section class="slider">
+  <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1500595046743-cd271d694d30');">
+    <div class="overlay">
+      <h2>Pure Milk from Happy Cows</h2>
+      <p>Fresh • Natural • Farm Direct</p>
+      <a href="#products" class="btn">Explore Our Products</a>
+    </div>
+  </div>
+
+  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1598514983318-2f64f8b15f2c');">
+    <div class="overlay">
+      <h2>Traditional Desi Ghee</h2>
+      <p>Slow Cooked • Healthy • Authentic</p>
+    </div>
+  </div>
+
+  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee');">
+    <div class="overlay">
+      <h2>Fresh Curd & Paneer</h2>
+      <p>Soft • Natural • Protein Rich</p>
+    </div>
+  </div>
 </section>
+
 
 <!-- PRODUCTS -->
 <section id="products" class="products">
