--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
 <footer>
   <p>© 2025 ShuddhaDhara Dairy. All Rights Reserved.</p>
 </footer>
+<script src="script.js"></script>
+</body>
+</html>
 
 </body>
 </html>
